Updating configuration.